--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "next-auth": "^4.24.8",
+    "mysql2": "^3.11.3",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
